tensorflow.md updated from https://stackedit.io/