@@ -259,6 +259,94 @@ virtualenv venv
 source venv/bin/activate
 ```
 
+#### ./configure
+(venv) sheviousui-iMac:~ shevious$ cd tensorflow-gpu-macosx/
+(venv) sheviousui-iMac:tensorflow-gpu-macosx shevious$ ./configure 
+Unable to find any JVMs matching version "1.7+".
+No Java runtime present, try --request to install.
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by com.google.protobuf.UnsafeUtil (file:/private/var/tmp/_bazel_shevious/install/ab3f5a92193ce7d9503f32b8ce350934/_embedded_binaries/A-server.jar) to field java.lang.String.value
+WARNING: Please consider reporting this to the maintainers of com.google.protobuf.UnsafeUtil
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+WARNING: --batch mode is deprecated. Please instead explicitly shut down your Bazel server using the command "bazel shutdown".
+You have bazel 0.17.2 installed.
+Please specify the location of python. [Default is /Users/shevious/venv/bin/python]: 
+
+
+Traceback (most recent call last):
+  File "<string>", line 1, in <module>
+AttributeError: module 'site' has no attribute 'getsitepackages'
+Found possible Python library paths:
+  /Users/shevious/venv/lib/python3.7/site-packages
+Please input the desired Python library path to use.  Default is [/Users/shevious/venv/lib/python3.7/site-packages]
+
+Do you wish to build TensorFlow with Google Cloud Platform support? [Y/n]: n
+No Google Cloud Platform support will be enabled for TensorFlow.
+
+Do you wish to build TensorFlow with Hadoop File System support? [Y/n]: n
+No Hadoop File System support will be enabled for TensorFlow.
+
+Do you wish to build TensorFlow with Amazon AWS Platform support? [Y/n]: n
+No Amazon AWS Platform support will be enabled for TensorFlow.
+
+Do you wish to build TensorFlow with Apache Kafka Platform support? [Y/n]: n
+No Apache Kafka Platform support will be enabled for TensorFlow.
+
+Do you wish to build TensorFlow with XLA JIT support? [y/N]: n
+No XLA JIT support will be enabled for TensorFlow.
+
+Do you wish to build TensorFlow with GDR support? [y/N]: n
+No GDR support will be enabled for TensorFlow.
+
+Do you wish to build TensorFlow with VERBS support? [y/N]: n
+No VERBS support will be enabled for TensorFlow.
+
+Do you wish to build TensorFlow with OpenCL SYCL support? [y/N]: n
+No OpenCL SYCL support will be enabled for TensorFlow.
+
+Do you wish to build TensorFlow with CUDA support? [y/N]: y
+CUDA support will be enabled for TensorFlow.
+
+Please specify the CUDA SDK version you want to use. [Leave empty to default to CUDA 9.0]: 9.1
+
+
+Please specify the location where CUDA 9.1 toolkit is installed. Refer to README.md for more details. [Default is /usr/local/cuda]: 
+
+
+Please specify the cuDNN version you want to use. [Leave empty to default to cuDNN 7.0]: 
+
+
+Please specify the location where cuDNN 7 library is installed. Refer to README.md for more details. [Default is /usr/local/cuda]:
+
+
+Please specify a list of comma-separated Cuda compute capabilities you want to build with.
+You can find the compute capability of your device at: https://developer.nvidia.com/cuda-gpus.
+Please note that each additional compute capability significantly increases your build time and binary size. [Default is: 3.5,7.0]
+
+
+Do you want to use clang as CUDA compiler? [y/N]: n
+nvcc will be used as CUDA compiler.
+
+Please specify which gcc should be used by nvcc as the host compiler. [Default is /usr/bin/gcc]: 
+
+
+Do you wish to build TensorFlow with MPI support? [y/N]: n
+No MPI support will be enabled for TensorFlow.
+
+Please specify optimization flags to use during compilation when bazel option "--config=opt" is specified [Default is -march=native]: 
+
+
+Would you like to interactively configure ./WORKSPACE for Android builds? [y/N]: n
+Not configuring the WORKSPACE for Android builds.
+
+Preconfigured Bazel build configs. You can use any of the below by adding "--config=<>" to your build command. See tools/bazel.rc for more details.
+        --config=mkl            # Build with MKL support.
+        --config=monolithic     # Config for mostly static monolithic build.
+Configuration finished
+`
+
+
 ```bash
 
 bazel build --config=cuda --config=opt --cxxopt="-D_GLIBCXX_USE_CXX11_ABI=0" --action_env PATH --action_env LD_LIBRARY_PATH --action_env DYLD_LIBRARY_PATH //tensorflow/tools/pip_package:build_pip_package
@@ -330,11 +418,11 @@ compile ok -> execution hang.
 https://www.travelertechie.com/2018/10/how-to-uninstall-cuda-drivers-from-macos.html  
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEwMjE4MTAxMjksLTE1ODcxNjU0MzIsMT
-Q0MTg0NTY2LDE0NDA4NDI5OTEsMTI4Nzg0OTgyNywtMjg1MjI3
-NDkzLC00ODI5NDUxNDksODMzMjI2NDIyLC02NjY5MzI3MjIsLT
-Q0NzA0NzgxOSwxMTg5MDcwNTY1LC0xNzcwMjc4NTg2LC0xMjEx
-Mzc0MDMwLDcwMDQxNzUxOSwxMjAyMTgwODkyLDIzNDgwMjgyMC
-wtMzQ5MzA1ODY5LC05MzE5MDk3MDAsLTk1OTMxMzcwMiw3MzQ5
-MDM0ODJdfQ==
+eyJoaXN0b3J5IjpbLTc2Nzg4ODU0MCwtMTAyMTgxMDEyOSwtMT
+U4NzE2NTQzMiwxNDQxODQ1NjYsMTQ0MDg0Mjk5MSwxMjg3ODQ5
+ODI3LC0yODUyMjc0OTMsLTQ4Mjk0NTE0OSw4MzMyMjY0MjIsLT
+Y2NjkzMjcyMiwtNDQ3MDQ3ODE5LDExODkwNzA1NjUsLTE3NzAy
+Nzg1ODYsLTEyMTEzNzQwMzAsNzAwNDE3NTE5LDEyMDIxODA4OT
+IsMjM0ODAyODIwLC0zNDkzMDU4NjksLTkzMTkwOTcwMCwtOTU5
+MzEzNzAyXX0=
 -->
